--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:full": "node start-dev.js",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
@@ -12,6 +13,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "ethers": "^6.8.1",
+    "wagmi": "^2.5.7",
+    "@wagmi/core": "^2.6.5",
+    "viem": "^2.7.15",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
