--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,13 +1,12 @@
 PORT=3001
 NODE_ENV=development
 
-# Base Network Configuration
-BASE_RPC_URL=https://mainnet.base.org
-BASE_CHAIN_ID=8453
-PRIVATE_KEY=your_private_key_here
+# Base Network Configuration (Testnet for development)
+BASE_RPC_URL=https://sepolia.base.org
+BASE_CHAIN_ID=84532
 
 # Database
 DB_PATH=./database/klunkaz.db
 
-# API Keys
-KRNL_API_KEY=your_krnl_api_key_here
+# Optional: Private key for server-side operations (not recommended for production)
+# PRIVATE_KEY=your_private_key_here
