--- a/backend/package.json
+++ b/backend/package.json
@@ -7,10 +7,14 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "init-db": "node scripts/init-db.js"
+    "init-db": "node scripts/init-db.js",
+    "test": "jest --verbose --coverage",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --coverageReporters=text-lcov"
   },
   "dependencies": {
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "cors": "^2.8.5",
     "sqlite3": "^5.1.6",
     "dotenv": "^16.3.1",
@@ -20,6 +24,9 @@
     "express-rate-limit": "^7.1.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "@jest/globals": "^29.7.0"
   }
 }
